create extension if not exists pgcrypto;

create or replace function public.update_telegram_bot_state_updated_at()
returns trigger
language plpgsql
set search_path = public, pg_temp
as $$
begin
  new.updated_at = now();
  return new;
end;
$$;

create or replace function public.rls_auto_enable()
returns event_trigger
language plpgsql
security definer
set search_path = pg_catalog
as $$
declare
  command record;
begin
  for command in
    select *
    from pg_event_trigger_ddl_commands()
    where command_tag in ('CREATE TABLE', 'CREATE TABLE AS', 'SELECT INTO')
      and object_type in ('table', 'partitioned table')
  loop
    if command.schema_name = 'public' then
      begin
        execute format('alter table if exists %s enable row level security', command.object_identity);
      exception when others then
        raise log 'rls_auto_enable failed for %', command.object_identity;
      end;
    end if;
  end loop;
end;
$$;

do $$
begin
  if not exists (select 1 from pg_event_trigger where evtname = 'ensure_rls') then
    execute $event_trigger$
      create event trigger ensure_rls
        on ddl_command_end
        when tag in ('CREATE TABLE', 'CREATE TABLE AS', 'SELECT INTO')
        execute function public.rls_auto_enable()
    $event_trigger$;
  end if;
end;
$$;

create table if not exists public.roles (
  id_rol bigint generated by default as identity primary key,
  nombre_rol text not null unique,
  created_at timestamptz default now(),
  created_by uuid,
  updated_at timestamptz default now(),
  updated_by uuid
);

create table if not exists public.empleados (
  id uuid primary key references auth.users(id) on delete cascade,
  id_rol bigint references public.roles(id_rol),
  nombre text not null,
  apellido text not null,
  nombre_usuario text not null unique,
  correo text unique,
  esta_activo boolean default true,
  created_at timestamptz default now(),
  created_by uuid,
  updated_at timestamptz default now(),
  updated_by uuid
);

create table if not exists public.categorias_productos (
  id_categoria bigint generated by default as identity primary key,
  nombre_categoria text not null unique,
  created_at timestamptz default now(),
  created_by uuid
);

create table if not exists public.productos (
  id_producto bigint generated by default as identity primary key,
  id_categoria bigint references public.categorias_productos(id_categoria),
  nombre_producto text not null unique,
  precio_unitario numeric(10,2) not null,
  descripcion text,
  esta_activo boolean default true,
  created_at timestamptz default now(),
  created_by uuid,
  updated_at timestamptz default now(),
  updated_by uuid
);

create table if not exists public.tipos_cliente (
  id_tipo_cliente bigint generated by default as identity primary key,
  nombre_tipo text not null unique
);

create table if not exists public.convenios (
  id_convenio uuid primary key default gen_random_uuid(),
  ruc text not null unique,
  nombre_empresa text not null,
  representante text,
  telefono text,
  email text,
  fecha_inicio date not null,
  fecha_caducidad date not null,
  esta_activo boolean default true,
  cupo_maximo integer default 0,
  archivo_firmado text,
  created_at timestamptz default now(),
  created_by uuid,
  updated_at timestamptz default now(),
  updated_by uuid
);

create table if not exists public.clientes (
  id_cliente uuid primary key default gen_random_uuid(),
  id_tipo_cliente bigint references public.tipos_cliente(id_tipo_cliente),
  cedula text not null unique,
  nombre text not null,
  apellido text not null,
  telefono text,
  esta_activo boolean default true,
  created_at timestamptz default now(),
  created_by uuid,
  updated_at timestamptz default now(),
  updated_by uuid
);

create table if not exists public.clientes_convenios (
  id_cliente uuid not null references public.clientes(id_cliente) on delete cascade,
  id_convenio uuid not null references public.convenios(id_convenio) on delete cascade,
  created_at timestamptz default now(),
  created_by uuid,
  primary key (id_cliente, id_convenio)
);

create table if not exists public.conveniohistorial (
  id uuid primary key default gen_random_uuid(),
  id_convenio uuid references public.convenios(id_convenio) on delete cascade,
  fecha_inicio date not null,
  fecha_caducidad date not null,
  archivo_firmado text,
  fecha_registro timestamptz default now()
);

create table if not exists public.saldos_servicio (
  id_cliente uuid references public.clientes(id_cliente) on delete cascade,
  id_producto bigint references public.productos(id_producto) on delete cascade,
  cantidad_disponible integer not null default 0,
  updated_at timestamptz default now(),
  updated_by uuid,
  primary key (id_cliente, id_producto)
);

create table if not exists public.recargas_saldo (
  id_recarga uuid primary key default gen_random_uuid(),
  id_cliente uuid references public.clientes(id_cliente) on delete cascade,
  id_producto bigint references public.productos(id_producto),
  cantidad_comprada integer not null,
  monto_total numeric(10,2) not null,
  numero_factura varchar(50),
  created_at timestamptz default now(),
  created_by uuid,
  updated_at timestamptz default now(),
  updated_by uuid
);

create table if not exists public.estados_orden (
  id_estado bigint generated by default as identity primary key,
  nombre_estado text not null unique
);

create table if not exists public.origenes_pedido (
  id_origen bigint generated by default as identity primary key,
  nombre_origen text not null unique
);

create table if not exists public.ordenes (
  id_orden uuid primary key default gen_random_uuid(),
  id_cliente uuid references public.clientes(id_cliente),
  id_estado bigint references public.estados_orden(id_estado),
  id_origen bigint references public.origenes_pedido(id_origen),
  id_empleado_atiende uuid references public.empleados(id),
  canal_origen text,
  metodo_pago text,
  observaciones text,
  created_at timestamptz default now(),
  created_by uuid,
  updated_at timestamptz default now(),
  updated_by uuid
);

create table if not exists public.detalle_orden (
  id_detalle uuid primary key default gen_random_uuid(),
  id_orden uuid references public.ordenes(id_orden) on delete cascade,
  id_producto bigint references public.productos(id_producto),
  cantidad integer not null,
  precio_aplicado numeric(10,2) not null,
  opciones jsonb default '{}'::jsonb,
  created_by uuid references public.empleados(id),
  updated_at timestamptz default now(),
  updated_by uuid references public.empleados(id)
);

create table if not exists public.categorias_menu (
  id_categoria_menu bigint generated by default as identity primary key,
  nombre_categoria text not null unique,
  codigo text not null unique,
  created_at timestamptz default now(),
  created_by uuid,
  updated_at timestamptz default now(),
  updated_by uuid
);

create table if not exists public.alimentos (
  id_alimento bigint generated by default as identity primary key,
  id_categoria_menu bigint references public.categorias_menu(id_categoria_menu) on delete cascade,
  nombre_alimento text not null,
  nombre_normalizado text generated always as (
    lower(regexp_replace(btrim(nombre_alimento), '\s+', ' ', 'g'))
  ) stored,
  created_at timestamptz default now(),
  created_by uuid,
  updated_at timestamptz default now(),
  updated_by uuid,
  unique (id_categoria_menu, nombre_alimento),
  unique (id_categoria_menu, nombre_normalizado)
);

create table if not exists public.telegram_bot_state (
  key text primary key,
  value jsonb not null default '{}'::jsonb,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

drop trigger if exists update_telegram_bot_state_updated_at on public.telegram_bot_state;
create trigger update_telegram_bot_state_updated_at
before update on public.telegram_bot_state
for each row execute function public.update_telegram_bot_state_updated_at();

insert into public.roles (id_rol, nombre_rol)
values (1, 'Super Admin'), (2, 'Empleado')
on conflict (id_rol) do nothing;

insert into public.tipos_cliente (id_tipo_cliente, nombre_tipo)
values (1, 'Cliente directo'), (2, 'Convenio')
on conflict (id_tipo_cliente) do nothing;

insert into public.estados_orden (id_estado, nombre_estado)
values (1, 'Reservado'), (2, 'Consumido'), (3, 'Cancelado')
on conflict (id_estado) do nothing;

insert into public.origenes_pedido (id_origen, nombre_origen)
values (1, 'Telegram'), (2, 'Sistema')
on conflict (id_origen) do nothing;

insert into public.categorias_productos (id_categoria, nombre_categoria)
values (1, 'Almuerzos'), (2, 'Restaurante'), (3, 'Tienda')
on conflict (id_categoria) do nothing;

insert into public.categorias_menu (id_categoria_menu, nombre_categoria, codigo)
values
  (1, 'Sopa', 'sopas'),
  (2, 'Plato fuerte', 'segundos'),
  (3, 'Guarnicion', 'guarniciones')
on conflict (id_categoria_menu) do nothing;
